--- a/cool.html
+++ b/cool.html
@@ -42,6 +42,21 @@
 
         <center><div class="waveawesomeSmall" data-splitting><h1>! Cool Stuff I made !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Cool Stuff that I made !</h1></div></center>
+        <h2 class="anotherOne">< Voice activated light switch ></h2>
+
+        <p class="videoThing"><iframe width="560" height="315" src="https://www.youtube.com/embed/-kQYg2utEmg?si=RYl90a5aohbRu3T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+        <p>Basically I made a thing that turns off my lights when I say "OFF"</p>
+        <p><b>The way it works:</b></p>
+        <ul class="myList">
+            <li>A servo motor is connected to an esp32 board, it's connected to wifi and is basically a server.</li>
+            <li>Im running a python speech recognition program on my laptop.</li>
+            <li>When it detects the word "OFF" in any sentence, it sends an http request to the board.</li>
+            <li>On receiving this, the board turns the servo and switches the light off.</li>
+            <li>also the whole mechanism is actually kept up by tape</li>
+        </ul>
+
+        <p>Coming soon as a commercial product in stores <b>(all of them)</b>.</p>
+
         <h2>< Name Leaver ></h2>
         <p>I added the ability for people to leave their names on my website! I did this for fun and it was pretty fun yeah.</p>
         <p><a class="coolpagelink" href="https://foggydude.dev/submit"><img src="assets/images/submissiongraphic.png"><p>Submission page</p> </a></p>
