--- a/birthday.html
+++ b/birthday.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="birthday.css?v=1.1">
     <link rel="stylesheet" href="splitting/splitting.css">
     <script src="splitting/splitting.js"></script>
-    <script src="birthday.js?v=1.5"></script>
+    <script src="birthday.js?v=1.6"></script>
 </head>
 <body>
     <div id="tile-container">
@@ -51,7 +51,7 @@
             <center><textarea maxlength="150" class="msgInput" id="umsg"></textarea></center>
             <center><p id="selectedcolor" class="colortext"></p></center>
 
-            <center><button onmousedown="submitAll()" type="button" class="submitShit">Submit your stuff!</button><br><br></center>
+            <center><button onmousedown="submitAll()" type="button" class="submitShit" id="elButton">Submit your stuff!</button><br><br></center>
 
             <center><p id="selectedcolor" class="colortext">music is Surfing on a Sine Wave by Fearofdark</p></center>
             <center><p id="selectedcolor" class="colortext">All the messages are saved on my laptop</p></center>
