--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="socials.html">Contacts</a></li>
                 <li><a href="cool.html">Cool Stuff</a></li>
+                <li><a href="game/index.html">game</a></li>
             </ul>
         </nav>
         <marquee behavior="scroll" direction="left">!UPDATE!ㅤㅤㅤㅤㅤYou can now <a href="https://foggydude.dev/submit">submit your names</a> to displayㅤㅤㅤㅤㅤ!UPDATE!</marquee>
