--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="socials.html">Contacts</a></li>
-                <li><a href="cool.html">Cool Stuff</a></li>
+                <li><a href="cool.html">Cool Stuffws</a></li>
                 <li><a href="game/index.html">game</a></li>
             </ul>
         </nav>
