--- a/socials.html
+++ b/socials.html
@@ -44,12 +44,20 @@
         <center><div class="waveawesome" data-splitting><h1>! Ways to contact me !</h1></div></center>
         <h2>< Social medias ></h2>
         <div class="OrangeSocialThing">
+            <a class="SocialLink" href="https://bsky.app/profile/foggydude.bsky.social">
+                <img class="SocialIcon" src="assets/images/bsky.png" alt="twitter icon">
+                @foggydude.bsky.social
+            </a>
+            <p class="SocialName">BlueSky</p>
+            <p class="SocialDesc">Sometimes I post cool sneakpeeks for my games and stuff like that on my bluesky.</p>
+        </div>
+        <div class="OrangeSocialThing">
             <a class="SocialLink" href="https://twitter.com/FoggyDudey">
                 <img class="SocialIcon" src="assets/images/twitter.png" alt="twitter icon">
                 @FoggyDudey
             </a>
             <p class="SocialName">Twitter</p>
-            <p class="SocialDesc">Sometimes I post cool sneakpeeks for my games and stuff like that on my twitter.</p>
+            <p class="SocialDesc">Sometimes post things on my twitter, not as active as my bluesky.</p>
         </div>
         <div class="OrangeSocialThing">
             <a class="SocialLink" href="https://www.youtube.com/@foggydude">
@@ -92,6 +100,14 @@
             </a>
             <p class="SocialName">Itch io page</p>
             <p class="SocialDesc">Itch io is the platform where I have published all my games so far.</p>
+        </div>
+        <div class="RedSocialThing">
+            <a class="SocialLink" href="https://fogson.bandcamp.com">
+                <img class="SocialIcon" src="assets/images/bandcamp.png" alt="itch icon">
+                fogson.bandcamp.com
+            </a>
+            <p class="SocialName">Friends Bandcamp</p>
+            <p class="SocialDesc">Bandcamp page of my good friend, Fogson</p>
         </div>
         <div class="RedSocialThing">
             <a class="SocialLink" href="https://foggydude.dev">
