update to socials again

--- a/socials.html
+++ b/socials.html
@@ -49,7 +49,7 @@
                 @foggydude.bsky.social
             </a>
             <p class="SocialName">BlueSky</p>
-            <p class="SocialDesc">Sometimes I post cool sneakpeeks for my games and stuff like that on my bluesky.</p>
+            <p class="SocialDesc">Sometimes I post cool sneakpeeks for my games and stuff like that on bluesky.</p>
         </div>
         <div class="OrangeSocialThing">
             <a class="SocialLink" href="https://twitter.com/FoggyDudey">
@@ -57,7 +57,7 @@
                 @FoggyDudey
             </a>
             <p class="SocialName">Twitter</p>
-            <p class="SocialDesc">Sometimes post things on my twitter, not as active as my bluesky.</p>
+            <p class="SocialDesc">Sometimes I post things on my twitter aswell.</p>
         </div>
         <div class="OrangeSocialThing">
             <a class="SocialLink" href="https://www.youtube.com/@foggydude">
