--- a/general2.html
+++ b/general2.html
@@ -17,7 +17,7 @@
     <title>GENERAL-2 TRANSLATOR</title>
     <link rel="stylesheet" href="translator.css">
     <script src="seedrandom.min.js"></script>
-    <script src="translator.js"></script>
+    <script src="translator.js?v=2.0"></script>
 </head>
 
 <body>
