--- a/general2.html
+++ b/general2.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GENERAL-2 TRANSLATOR</title>
-    <link rel="stylesheet" href="translator.css">
+    <link rel="stylesheet" href="translator.css?v=1.2">
     <script src="seedrandom.min.js"></script>
     <script src="translator.js?v=2.5"></script>
 </head>
