--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         
         <div class="game-slide-container">
             <div class="gameslide fade">
+                <a href="https://foggydude.itch.io/can">
+                    <img src="assets/images/games/canmessenger.png">
+                </a>
+                <center><div class="gamename">CAN</div></center>
+                <center><div class="gamedesc">Cool Awesome Messenger</div></center>
+                <center><div class="gamestatus">Status: Finished (but i update it sometimes)</div></center>
+            </div>
+            <div class="gameslide fade">
                 <a href="assets/images/amessage.png">
                     <img src="assets/images/games/rice.png">
                 </a>
