changes to cool

--- a/cool.html
+++ b/cool.html
@@ -42,6 +42,20 @@
 
         <center><div class="waveawesomeSmall" data-splitting><h1>! Cool Stuff I made !</h1></div></center>
         <center><div class="waveawesome" data-splitting><h1>! Cool Stuff that I made !</h1></div></center>
+        <h2>< CAN ></h2>
+
+        <p class="videoThing"><iframe width="560" height="315" src="https://www.youtube.com/embed/FIFWemABRAU?si=VemNwdoJm97W0ngD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+        <p>I made a messenger app based on the ideas I got from Hog Sender</p>
+        <p><b>The way it works:</b></p>
+        <ul class="myList">
+            <li>There is a cloudflare worker which I set up to process all kinds of request.</li>
+            <li>Names and messages get saved to a database.</li>
+            <li>Every 10 seconds or so the app fetches new messages from the database using your username.</li>
+            <li>Groups (which is the newest update) pretty much functions like an alt account.</li>
+        </ul>
+
+        <p>Available now on <a class="coolpagelink" href="https://foggydude.itch.io/can">itch.io</a> <b>for free!!!</b>
+
         <h2 class="anotherOne">< Voice activated light switch ></h2>
 
         <p class="videoThing"><iframe width="560" height="315" src="https://www.youtube.com/embed/-kQYg2utEmg?si=RYl90a5aohbRu3T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
