--- a/FBAR/main.html
+++ b/FBAR/main.html
@@ -2,11 +2,16 @@
 <html lang="en">
 
 <head>
-    
+    <link rel="stylesheet" href="fbar.css?v=1.0">
 </head>
 
 <body>
-    FUCK YOU
+    FBAR OFFICE
+    <div class="imgcontainer">
+        <a href="door.html" style="width: 50px; height: 120px; position: absolute; transform: translate(0px,-50px);"></a>
+        <a href="desk.html" style="width: 100px; height: 120px; position: absolute; transform: translate(360px,0px);"></a>
+        <img class="bigimage" src="assets/office.png">
+    </div>
 
 </body>
 
