--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -8,6 +8,7 @@
 <body>
     THE DESK
     <div class="imgcontainer">
+        <a href="computer.html" style="width: 300px; height: 200px; position: absolute; transform: translate(10px,0px);"></a>
         <img class="bigimage" src="assets/computer.png">
     </div>
     <a class="linkback" href="main.html">↓</a>
