--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -12,6 +12,9 @@
         <img class="bigimage" src="assets/computer.png">
     </div>
     <a class="linkback" href="main.html">↓</a>
+    <audio preload="auto" autoplay="autoplay" loop="loop">
+        <source src="assets/music/indream.mp3" type="audio/mp3">
+    </audio>
 </body>
 
 </html>
