--- a/FBAR/main.html
+++ b/FBAR/main.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.0">
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -12,6 +13,9 @@
         <a href="desk.html" style="width: 100px; height: 120px; position: absolute; transform: translate(360px,0px);"></a>
         <img class="bigimage" src="assets/office.png">
     </div>
+    <audio preload="auto" autoplay="autoplay" loop="loop">
+        <source src="assets/music/indream.mp3" type="audio/mp3">
+    </audio>
 
 </body>
 
