--- a/FBAR/main.html
+++ b/FBAR/main.html
@@ -6,7 +6,7 @@
     <script src="main.js"></script>
 </head>
 
-<body>
+<body onload="whenLoaded()">
     FBAR OFFICE
     <div class="imgcontainer">
         <a href="door.html" style="width: 50px; height: 120px; position: absolute; transform: translate(0px,-50px);"></a>
