--- a/FBAR/door.html
+++ b/FBAR/door.html
@@ -6,7 +6,7 @@
     <script src="main.js?v=1.3"></script>
 </head>
 
-<body>
+<body onload="whenLoaded()"> 
     THE DOOR
     <div class="imgcontainer">
         <img class="bigimage" src="assets/door.png">
