--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -3,9 +3,10 @@
 
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.0">
+    <script src="main.js?v=1.3"></script>
 </head>
 
-<body>
+<body onload="whenLoaded()">
     THE DESK
     <div class="imgcontainer">
         <a href="computer.html" style="width: 300px; height: 200px; position: absolute; transform: translate(10px,0px);"></a>
