--- a/FBAR/door.html
+++ b/FBAR/door.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.0">
-    <script src="main.js?v=1.4"></script>
+    <script src="main.js?v=1.5"></script>
 </head>
 
 <body onload="whenLoaded()"> 
@@ -12,7 +12,7 @@
         <img class="bigimage" src="assets/door.png">
     </div>
     <a class="linkback" href="main.html">↓</a>
-    <audio preload="auto" autoplay="autoplay" loop="loop">
+     <audio id="musicPlayer" preload="auto" autoplay="autoplay">
         <source src="assets/music/indream.mp3" type="audio/mp3">
     </audio>
 </body>
