--- a/FBAR/main.html
+++ b/FBAR/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.0">
-    <script src="main.js?v=1.4"></script>
+    <script src="main.js?v=1.5"></script>
 </head>
 
 <body onload="whenLoaded()">
@@ -13,7 +13,8 @@
         <a href="desk.html" style="width: 100px; height: 120px; position: absolute; transform: translate(360px,0px);"></a>
         <img class="bigimage" src="assets/office.png">
     </div>
-    <audio preload="auto" autoplay="autoplay" loop="loop">
+    <button onclick="enableSuperSpeed()">ENABLE 10x speed</button>
+    <audio id="musicPlayer" preload="auto" autoplay="autoplay">
         <source src="assets/music/indream.mp3" type="audio/mp3">
     </audio>
 
