--- a/FBAR/interrogation.html
+++ b/FBAR/interrogation.html
@@ -7,12 +7,11 @@
 </head>
 
 <body onload="whenLoaded()"> 
-    THE DOOR
+    INTERROGATION ROOM
     <div class="imgcontainer">
-        <a href="interrogation.html" style="width: 230px; height: 520px; position: absolute; transform: translate(-30px,40px);"></a>
-        <img class="bigimage" src="assets/door.png">
+        <img class="bigimage" src="assets/AlienInterrogate.png">
     </div>
-    <a class="linkback" href="main.html">↓</a>
+    <a class="linkback" href="door.html">↓</a>
      <audio id="musicPlayer" preload="auto" autoplay="autoplay">
         <source src="assets/music/indream.mp3" type="audio/mp3">
     </audio>
