--- a/FBAR/computer.html
+++ b/FBAR/computer.html
@@ -10,6 +10,15 @@
     <div class="imgcontainer">
         <video autoplay muted class="bigvid" src="assets/computerboot.mp4">
     </div>
+    <audio preload="auto" autoplay="autoplay">
+        <source src="assets/soundfx/FBARlogochime.mp3" type="audio/mp3">
+    </audio>
+    <audio preload="auto" autoplay="autoplay" loop="loop">
+        <source src="assets/soundfx/computerfan.mp3" type="audio/mp3">
+    </audio>
+     <audio preload="auto" autoplay="autoplay">
+        <source src="assets/soundfx/computerpoweron.mp3" type="audio/mp3">
+    </audio>
     <a class="linkback" href="desk.html">↓</a>
 </body>
 
