--- a/FBAR/interrogation.html
+++ b/FBAR/interrogation.html
@@ -15,6 +15,15 @@
      <audio id="musicPlayer" preload="auto" autoplay="autoplay">
         <source src="assets/music/indream.mp3" type="audio/mp3">
     </audio>
+        <audio preload="auto" loop="loop" autoplay="autoplay">
+        <source src="assets/soundfx/cellwaterdrip.mp3" type="audio/mp3">
+    </audio>
+    <audio preload="auto" autoplay="autoplay">
+        <source src="assets/soundfx/dooropen.mp3" type="audio/mp3">
+    </audio>
+    <audio preload="auto" loop="loop" autoplay="autoplay">
+        <source src="assets/soundfx/AC.mp3" type="audio/mp3">
+    </audio>
 </body>
 
 </html>
