--- a/FBAR/main.html
+++ b/FBAR/main.html
@@ -17,6 +17,9 @@
     <audio id="musicPlayer" preload="auto" autoplay="autoplay">
         <source src="assets/music/indream.mp3" type="audio/mp3">
     </audio>
+    <audio preload="auto" loop="loop" autoplay="autoplay">
+        <source src="assets/soundfx/light.mp3" type="audio/mp3">
+    </audio>
 
 </body>
 
