--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -16,6 +16,12 @@
      <audio id="musicPlayer" preload="auto" autoplay="autoplay">
         <source src="assets/music/indream.mp3" type="audio/mp3">
     </audio>
+    <audio preload="auto" loop="loop" autoplay="autoplay">
+        <source src="assets/soundfx/light.mp3" type="audio/mp3">
+    </audio>
+    <audio preload="auto" loop="loop" autoplay="autoplay">
+        <source src="assets/soundfx/AC.mp3" type="audio/mp3">
+    </audio>
 </body>
 
 </html>
