--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -21,6 +21,9 @@
     </audio>
     <audio preload="auto" loop="loop" autoplay="autoplay">
         <source src="assets/soundfx/AC.mp3" type="audio/mp3">
+     </audio>
+    <audio preload="auto" autoplay="autoplay">
+        <source src="assets/soundfx/chair.mp3" type="audio/mp3">
     </audio>
 </body>
 
