updated forest game

--- a/FBAR/forestgame.html
+++ b/FBAR/forestgame.html
@@ -5,9 +5,10 @@
     <link rel="stylesheet" href="fbar.css?v=1.0">
     <script src="main.js?v=1.6"></script>
     <script src="forestgame.js"></script>
+    <script src="../seedrandom.min.js"></script>
 </head>
 
-<body onload="processMovement()">
+<body onload="processMovement();disableAnimation()">
     <button id="upbutton" class="linkback">↑</button>
     <div class="imgcontainer">
         <img class="computerborder" src="assets/border.png">
