forest game test with images

--- a/FBAR/forestgame.html
+++ b/FBAR/forestgame.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="fbar.css?v=1.0">
+    <link rel="stylesheet" href="fbar.css?v=1.5">
     <script src="main.js?v=1.6"></script>
-    <script src="forestgame.js"></script>
+    <script src="forestgame.js?v=1.2"></script>
     <script src="../seedrandom.min.js"></script>
 </head>
 
@@ -16,8 +16,7 @@
             <button id="leftbutton" class="leftkey">←</button>
             <button id="rightbutton" class="rightkey">→</button>
         </div>
-    </div>
-        <img class="forestgame">
+        <img id="gameimg" class="forestgameimg" src="">
     </div>
     <button id="downbutton" class="linkback">↓</button>
     <p id="debug">Current path: </p>
