starting work on icons

--- a/FBAR/computer.html
+++ b/FBAR/computer.html
@@ -7,9 +7,17 @@
 </head>
 
 <body onload="whenLoaded()">
-    THE COMPUTER
+    THE COMPUTER    
     <div class="imgcontainer">
         <video autoplay muted class="bigvid" src="assets/computerboot.mp4">
+    </div>
+
+    <div class="compicons">
+        <table>
+            <td id="icon1"><img src="assets/door.png"></td>
+            <td><img src="assets/office.png"></td>
+            <td><img src="assets/office.png"></td>
+        </table>
     </div>
 
     <audio id="musicPlayer" preload="auto" autoplay="autoplay">
@@ -24,6 +32,7 @@
      <audio preload="auto" autoplay="autoplay">
         <source src="assets/soundfx/computerpoweron.mp3" type="audio/mp3">
     </audio>
+
     <a class="linkback" href="desk.html">↓</a>
 </body>
 
