--- a/FBAR/computer.html
+++ b/FBAR/computer.html
@@ -4,9 +4,10 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.0">
     <script src="main.js?v=1.6"></script>
+    <script src="computer.js"></script>
 </head>
 
-<body onload="whenLoaded()">
+<body onload="whenLoaded();check_password('triffid')">
     THE COMPUTER    
     <div class="imgcontainer">
         <video autoplay muted class="bigvid" src="assets/computerboot.mp4">
