--- a/FBAR/forestgame.html
+++ b/FBAR/forestgame.html
@@ -21,6 +21,9 @@
     <button id="downbutton" class="linkback">↓</button>
     <p id="debug">Current path: </p>
 
+    <audio preload="auto" autoplay="autoplay" loop="loop">
+        <source src="assets/soundfx/computerfan.mp3" type="audio/mp3">
+    </audio>
 </body>
 
 </html>
