--- a/FBAR/forestgame.html
+++ b/FBAR/forestgame.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.5">
     <script src="main.js?v=1.6"></script>
-    <script src="forestgame.js?v=1.7"></script>
+    <script src="forestgame.js?v=1.8"></script>
     <script src="../seedrandom.min.js"></script>
 </head>
 
@@ -19,7 +19,9 @@
         <img id="gameimg" class="forestgameimg" src="">
     </div>
     <button id="downbutton" class="linkback">↓</button>
-    <p id="debug">Current path: </p>
+    <p></p>
+    <a class="linkback" href="desk.html">↓</a>
+    <p id="debug"></p>
 
     <audio preload="auto" autoplay="autoplay" loop="loop">
         <source src="assets/soundfx/computerfan.mp3" type="audio/mp3">
