--- a/FBAR/computer.html
+++ b/FBAR/computer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="fbar.css?v=1.2">
+    <link rel="stylesheet" href="fbar.css?v=1.3">
     <script src="main.js?v=1.5"></script>
     <script src="computer.js?v=2.1"></script>
 </head>
@@ -15,7 +15,7 @@
 
     <div class="compicons">
         <table>
-            <td class="compicon" id="translator"><a href="desk.html"><img src="assets/computericons/translator.png"></a></td>
+            <td class="compicon" id="translator"><a href="translator.html"><img src="assets/computericons/translator.png"></a></td>
             <td class="compicon" id="forestgame"><a href="forestgame.html"><img src="assets/computericons/forestgame.png"></a></td>
         </table>
     </div>
@@ -25,7 +25,7 @@
         <p></p>
         <input id="passwordinput" type="text" maxlength="8">
         <p></p>
-        <button onclick="check_password()">ENTER</button>
+        <button class="coolbutton" onclick="check_password()">ENTER</button>
         <p id="alerttext"></p>
     </div>    
     <img class="loadinggif" src="assets/computericons/loading.gif">
