--- a/FBAR/translator.html
+++ b/FBAR/translator.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.6">
     <script src="main.js?v=1.6"></script>
-    <script src="translator.js"></script>
+    <script src="translator.js?1.2"></script>
     <script src="../seedrandom.min.js"></script>
 </head>
 
