forgot to remove placeholders

--- a/FBAR/translator.html
+++ b/FBAR/translator.html
@@ -20,7 +20,7 @@
                 <td><textarea id="inputarea" maxlength="10" placeholder="[KEY]"></textarea></td>
                 <td class="bigskip"></td>
                 <td>
-                    <button class="dropbtn">GR</button>
+                    <button class="dropbtn">1</button>
                     <div class="colormenu">
                         <button>GR</button>
                         <button>BL</button>
@@ -28,7 +28,7 @@
                     </div>
                 </td>
                 <td>
-                    <button class="dropbtn">BL</button>
+                    <button class="dropbtn">2</button>
                     <div class="colormenu">
                         <button>WH</button>
                         <button>PU</button>
@@ -36,7 +36,7 @@
                     </div>
                 </td>
                 <td>
-                    <button class="dropbtn">GR</button>
+                    <button class="dropbtn">3</button>
                     <div class="colormenu">
                         <button>YL</button>
                         <button>RE</button>
