alien dialoguye and beeps

--- a/FBAR/forestgame.html
+++ b/FBAR/forestgame.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.5">
     <script src="main.js?v=1.6"></script>
-    <script src="forestgame.js?v=1.8"></script>
+    <script src="forestgame.js?v=1.9"></script>
     <script src="../seedrandom.min.js"></script>
 </head>
 
@@ -25,6 +25,10 @@
 
     <audio preload="auto" autoplay="autoplay" loop="loop">
         <source src="assets/soundfx/computerfan.mp3" type="audio/mp3">
+    </audio>
+
+    <audio id="beep" preload="auto">
+        <source src="assets/soundfx/beep.wav" type="audio/wav">
     </audio>
 </body>
 
