--- a/FBAR/interrogation.html
+++ b/FBAR/interrogation.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.0">
     <script src="main.js?v=1.6"></script>
+    <script src="interrogation.js"></script>
 </head>
 
 <body onload="whenLoaded()"> 
@@ -24,6 +25,10 @@
     <audio preload="auto" loop="loop" autoplay="autoplay">
         <source src="assets/soundfx/AC.mp3" type="audio/mp3">
     </audio>
+
+    <button onclick="playDialogue()" style="width: 300px; height: 300px; position: absolute; transform: translate(-150px,-450px); opacity: 0;"></button>
+
+    <p class="alientext" style="opacity: 0;"></p>
 </body>
 
 </html>
