--- a/FBAR/translator.html
+++ b/FBAR/translator.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.6">
     <script src="main.js?v=1.6"></script>
-    <script src="translator.js?1.2"></script>
+    <script src="translator.js?1.3"></script>
     <script src="../seedrandom.min.js"></script>
 </head>
 
@@ -60,6 +60,10 @@
 
     <audio preload="auto" autoplay="autoplay" loop="loop">
         <source src="assets/soundfx/computerfan.mp3" type="audio/mp3">
+    </audio>
+
+    <audio id="beep" preload="auto">
+        <source src="assets/soundfx/beep.wav" type="audio/wav">
     </audio>
 </body>
 
