changed some stuff and started work on files

--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="fbar.css?v=1.0">
+    <link rel="stylesheet" href="fbar.css?v=1.2">
     <script src="main.js?v=1.6"></script>
     <script>
         function checkDisk(){
@@ -24,6 +24,7 @@
     THE DESK
     <div class="imgcontainer">
         <a href="computer.html" style="width: 250px; height: 200px; position: absolute; transform: translate(10px,0px);"></a>
+        <a href="files.html" style="width: 130px; height: 100px; position: absolute; transform: translate(-270px,120px);"></a>
         <img id="computerimg" class="bigimage" src="assets/computer-2.png">
         <a id="diskbutton" href="computer.html?diskactivation" style="width: 100px; height: 70px; position: absolute; transform: translate(180px,160px);"></a>
     </div>
