--- a/FBAR/files.html
+++ b/FBAR/files.html
@@ -11,7 +11,7 @@
     <p class="header" id="filename">FILE №2323</p>
 
     <div id="mainpage" class="imgcontainer">
-        <img id="coverimage" class="fileimage" src="assets/file/filePH.png">
+        <img id="coverimage" class="fileimage" src="assets/file/FILERENDER.png">
         <div class="horizontalcont" style="width: 1200px;">
             <button id="leftbutton" class="leftkey">←</button>
             <button id="rightbutton" class="rightkey">→</button>
@@ -20,7 +20,7 @@
     </div>
 
     <div id="file1" class="imgcontainer" style="display: none;">
-        <img id="coverimage" class="fileimage" src="assets/file/paperPH.png" style="max-width: 600px;">
+        <img id="coverimage" class="fileimage" src="assets/file/WILD1.png" style="max-width: 600px;">
     </div>
 
     <div id="file2" class="imgcontainer" style="display: none;">
