--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.2">
-    <script src="main.js?v=1.8"></script>
+    <script src="main.js?v=1.8" type="module"></script>
     <script type="module">
         import {isPasswordRight} from "./main.js"
 
