--- a/FBAR/desk.html
+++ b/FBAR/desk.html
@@ -3,16 +3,14 @@
 
 <head>
     <link rel="stylesheet" href="fbar.css?v=1.2">
-    <script src="main.js?v=1.8" type="module"></script>
-    <script type="module">
-        import {isPasswordRight} from "./main.js"
-
+    <script src="main.js?v=1.9"></script>
+    <script>
         function checkDisk(){
-            let diskactive = isPasswordRight();
+            let diskactive = localStorage.getItem("diskactive");
             const compimg = document.getElementById("computerimg");
             const diskbutton = document.getElementById("diskbutton");
 
-            if (diskactive){
+            if (diskactive=="true"){
                 compimg.setAttribute("src","assets/computer.png")
                 diskbutton.remove()
             } else {
