--- a/FBAR/files.html
+++ b/FBAR/files.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="fbar.css?v=3.0">
     <script src="main.js?v=1.6"></script>
-    <script src="files.js?v=1.2"></script>
+    <script src="files.js?v=1.3"></script>
 </head>
 
 <body onload="whenLoaded();setupStuff(true)">
@@ -20,7 +20,12 @@
     </div>
 
     <div id="file1" class="imgcontainer" style="display: none;">
-        <img id="coverimage" class="fileimage" src="assets/file/WILD1.png" style="max-width: 600px;">
+        <img id="page1" class="fileimage" src="assets/file/WILD1.png" style="max-width: 600px;">
+        <img id="page2" class="fileimage" src="assets/file/WILD2.png" style="max-width: 700px;">
+        <div class="horizontalcont" style="width: 1000px;">
+            <button class="leftkey">←</button>
+            <button class="rightkey">→</button>
+        </div>
     </div>
 
     <div id="file2" class="imgcontainer" style="display: none;">
